# multidim-screening

./: LICENSE  Makefile  mkdocs.yml  mypy.ini  pyproject.toml
.github/workflows/: main.yml  on-release-main.yml
docs/: index.md  main.md
multidim_screening/: INSUR.py  calibration.py  classes.py  do_plots.py  insurance_d2_m2.py  insurance_d2_m2_plots.py  insurance_d2_m2_values.py  main.py  plots.py  solver.py  specif.py  surplus.py  utils.py  values.py
tests/: test_main.py
